# extension

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  locustfile_from_har.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  test.har  test_results.txt  tsconfig.json
.github/workflows/: publish.yml
.tours/: locust_beginner.tour
activate/: pyvenv.cfg
locust_env/: pyvenv.cfg
mcp/: requirements.txt  server.py
media/: 08-copilot.md  webView.html
media/.tours/: locust_beginner.tour
media/copilot_tutorial/: 01-copilot.md  02-copilot.md  03-copilot.md  04-copilot.md  05-copilot.md  06-copilot.md  07-copilot.md  08-copilot.md
media/tour/: locust_beginner.tour
media/tutorial/: locustfile_tour.py
media/walkthrough/: 00-beginner-tour.md  01-init.md  01-interface.md  02-create.md  03-headless.md  04-ui.md  05-refresh.md  06-edit.md  07-har2locust.md  08-copilot.md
samples/: sample.har
snippets/: locust.json
src/: extension.ts  locustTree.ts  setup.ts
src/commands/: registerCommands.ts
src/core/: config.ts  logger.ts
src/playground_app/: locust_playground_app.py  main.py
src/runners/: har2locustRunner.ts  locustRunner.ts  tourRunner.ts
src/services/: copilotService.ts  envService.ts  har2locustService.ts  locustCloudService.ts  mcpService.ts  setupService.ts
src/syntaxes/: locust.tmLanguage.json
src/test/: extension.test.ts  runTest.ts
src/tree/: locustTree.ts
src/welcome/: locustWelcome.ts  welcomePanel.ts  welcomeView.ts
templates/: locustfile.py  sample_locustfile.py  test_pytest.py
typings/locust/: __init__.pyi
(+6 files in other folders)
